broken but fine